feat(initial): use only one photogallery components

--- a/src/components/Bottom/css/bottom.css
+++ b/src/components/Bottom/css/bottom.css
@@ -1,5 +1,4 @@
 .bottom{
 	text-align : center;
-	background: white;
-	background-image: url("./../../../images/background.gif");
+	background: black;
 }
