--- a/src/components/PhotoGallery/css/App.css
+++ b/src/components/PhotoGallery/css/App.css
@@ -1,7 +1,7 @@
 .container {
-  /* background: black;
+  background: black;
   margin: auto;
   width: 100%;
-  height: 100vh; */
+
   overflow: hidden;
 }
