--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,7 +1,7 @@
 body {
 	font-family : Verdana, Helvetica, sans-serif;
 	line-height: 1.6;
-	background-image: url("../images/background.gif");
+	background: black;
 }
 
 .top_container {
