--- a/src/components/Meteo/css/ModifyPocasi.module.css
+++ b/src/components/Meteo/css/ModifyPocasi.module.css
@@ -8,7 +8,7 @@
     max-width: 600px;
     left: 50%;
     top: 200px;
-    //transform: translate(-50%, -50%);
+    /* transform: translate(-50%, -50%); */
     transform: translateX(-50%);
     background-color: rgba(0, 0, 0, 0.5);
 }
