--- a/src/components/Forum/css/forum.css
+++ b/src/components/Forum/css/forum.css
@@ -1,111 +1,115 @@
-
-input[type=text], textarea[type=text], select, input[type=submit] {
-	padding: 2px 5px;
-	margin: 2px 5px;
-	box-sizing: border-box;
-	border: 3px solid #ccc;
-	-webkit-transition: 0.5s;
-	transition: 0.5s;
-	outline: none;
-  }
-  
-  input[type=text]:focus, textarea[type=text]:focus, select:focus, input[type=submit]:focus {
-	border: 3px solid #555;
-  }
-  
-  .kniha_pagination{
-	width: 80%;
-	margin: 0 auto;
-	padding-bottom: 10px;
+.kniha_formular input[type='text'],
+.kniha_formular textarea[type='text'],
+.kniha_formular select,
+.kniha_formular input[type='submit'] {
+  padding: 2px 5px;
+  margin: 2px 5px;
+  box-sizing: border-box;
+  border: 3px solid #ccc;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  outline: none;
 }
 
-.pagina, .paginaPrev, .paginaNext{
-	background-color: white;
-	font-size: 12px;
-	padding: 0;
-	margin: 0 ;
-	white-space: nowrap;
-	width: 30px;
-	height: 30px;
-	border-style: none;
-	cursor: pointer;
-	display: inline-block;
+.kniha_formular input[type='text']:focus,
+.kniha_formular textarea[type='text']:focus,
+.kniha_formular select:focus,
+.kniha_formular input[type='submit']:focus {
+  border: 3px solid #555;
 }
 
-.left{
-	text-align: left;
+.kniha_pagination {
+  width: 80%;
+  margin: 0 auto;
+  padding-bottom: 10px;
+}
+
+.pagina,
+.paginaPrev,
+.paginaNext {
+  background-color: white;
+  font-size: 12px;
+  padding: 0;
+  margin: 0;
+  white-space: nowrap;
+  width: 30px;
+  height: 30px;
+  border-style: none;
+  cursor: pointer;
+  display: inline-block;
+}
+
+.left {
+  text-align: left;
 }
 
 .App-link {
   color: #09d3ac;
 }
 
-
-
 .fields {
-    display: grid;
-	grid-template-columns: repeat(2, 1fr);
-	width: auto;
-	max-width: 710px;
-    font-size: 0.8rem;
-    color: #fff;
-    grid-gap: 0.1rem;
-    margin-top: 1rem;
-	text-align: center;
-	margin: auto;
-  }
-
-  .btn-group .button {
-	background-color: #4CAF50; /* Green */
-	border: 1px solid green;
-	color: white;
-	padding: 5px 10px;
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-	font-size: 16px;
-	cursor: pointer;
-	float: center;
-  }
-  
-  .btn-group .button:not(:last-child) {
-	border-right: none; /* Prevent double borders */
-  }
-  
-  .btn-group .button:hover {
-	background-color: #3e8e41;
-  }
-
-  .button_on{
-	background-color: green;
-  }
-
-.kniha_main{
-	width: 100%;
-	margin: 10px auto;
-	padding: 10px;
-	background: #FE9A2C;
-	border: 1px solid #EBEBEB;
-	font-size: 14px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  width: auto;
+  max-width: 710px;
+  font-size: 0.8rem;
+  color: #fff;
+  grid-gap: 0.1rem;
+  margin-top: 1rem;
+  text-align: center;
+  margin: auto;
 }
 
-.kniha_one_entry{
-	margin: 10px;
-	padding: 10px;
-	border: 0px ;
-	background-color: #EBEBEB;
-
+.btn-group .button {
+  background-color: #4caf50; /* Green */
+  border: 1px solid green;
+  color: white;
+  padding: 5px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+  float: center;
 }
 
-.kniha_one_entry .kniha_datum{
-	text-align: right;
-	font-size: 10px;
+.btn-group .button:not(:last-child) {
+  border-right: none; /* Prevent double borders */
 }
 
-.kniha_one_entry .kniha_jmeno{
-	text-align: left;
+.btn-group .button:hover {
+  background-color: #3e8e41;
 }
 
-.kniha_one_entry .kniha_text{
-	text-align: left;
-} 
+.button_on {
+  background-color: green;
+}
+
+.kniha_main {
+  width: 100%;
+  margin: 10px auto;
+  padding: 10px;
+  background: #fe9a2c;
+  border: 1px solid #ebebeb;
+  font-size: 14px;
+}
+
+.kniha_one_entry {
+  margin: 10px;
+  padding: 10px;
+  border: 0px;
+  background-color: #ebebeb;
+}
+
+.kniha_one_entry .kniha_datum {
+  text-align: right;
+  font-size: 10px;
+}
+
+.kniha_one_entry .kniha_jmeno {
+  text-align: left;
+}
+
+.kniha_one_entry .kniha_text {
+  text-align: left;
+}
