--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,94 +1,92 @@
 .top_container {
-	margin: auto;
+  margin: auto;
 }
 
 * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-  }
-  
-  .bottom {
-	text-align: center;
-  }
-  
-  .header {
-	background: #555555;
-	text-align: center;
-	padding: 2px;
-	color: white;
-	font-size: 14px;
-	font-weight: bold;
-	clear: both;
-  }
-  
-  .header a {
-	color: White;
-	text-decoration: none;
-  }
-  
-  .header a:hover {
-	color: Lime;
-	text-decoration: none;
-  }
-  
-  .mainpicture {
-	text-align: center;
-	width: 100%;
-	max-width: 724px;
-  }
-  
-  .mainpicture img {
-	vertical-align: top;
-	width: 100%;
-	max-width: 724px;
-  }
-  
-  /* -------------------------index.html */
-  .kniha_small {
-	background: white;
-	color: black;
-	font-size: 12px;
-  }
-  
-  .kniha-main-page {
-	background-color: white;
-	color: black;
-	font-size: 12px;
-	padding: 5px;
-  }
-  
-  .kniha-main-page li {
-	list-style: none;
-  }
-  
-  .center {
-	text-align: center;
-	margin: 0 auto;
-	background: #FF9933;
-	color: black;
-  }
-  
-  .text {
-	text-align: justify;
-	padding: 1vw 2vw 2vw 2vw;
-	background: #FF9933;
-	color: black;
-  }
-  
-  .text ul {
-	text-align: left;
-	padding: 1vw 2vw 2vw 2vw;
-  }
-  
-  .img-float-left {
-	float: left;
-	margin: 0 1rem 1rem 0;
-	border: 1px solid black;
-  }
-  
-  table.page {
-	background: #FF9933;
-  }
-  
-  
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.bottom {
+  text-align: center;
+}
+
+.header {
+  background: #555555;
+  text-align: center;
+  padding: 2px;
+  color: white;
+  font-size: 14px;
+  font-weight: bold;
+  clear: both;
+}
+
+.header a {
+  color: White;
+  text-decoration: none;
+}
+
+.header a:hover {
+  color: Lime;
+  text-decoration: none;
+}
+
+.mainpicture {
+  text-align: center;
+  width: 100%;
+  max-width: 724px;
+}
+
+.mainpicture img {
+  vertical-align: top;
+  width: 100%;
+  max-width: 724px;
+}
+
+/* -------------------------index.html */
+.kniha_small {
+  background: white;
+  color: black;
+  font-size: 12px;
+}
+
+.kniha-main-page {
+  background-color: white;
+  color: black;
+  font-size: 12px;
+  padding: 5px;
+}
+
+.kniha-main-page li {
+  list-style: none;
+}
+
+.center {
+  text-align: center;
+  margin: 0 auto;
+  background: #ff9933;
+  color: black;
+}
+
+.text {
+  text-align: justify;
+  padding: 1vw 2vw 2vw 2vw;
+  background: #ff9933;
+  color: black;
+}
+
+.text ul {
+  text-align: left;
+  padding: 1vw 2vw 2vw 2vw;
+}
+
+.img-float-left {
+  float: left;
+  margin: 0 1rem 1rem 0;
+  border: 1px solid black;
+}
+
+table.page {
+  background: #ff9933;
+}
