feat(forum): design tunning

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -16,11 +16,20 @@ body {
 .header {
   background: #555555;
   text-align: center;
-  padding: 2px;
   color: white;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: bold;
   clear: both;
+
+  a {
+    color: White;
+    text-decoration: none;
+
+    &:hover {
+      color: Lime;
+      text-decoration: none;
+    }
+  }
 }
 
 .text {
