feat(rq): add next react query, corret slideshow

--- a/src/components/Start/WebCam/css/WebCamSlideShow.css
+++ b/src/components/Start/WebCam/css/WebCamSlideShow.css
@@ -1,13 +1,11 @@
-.slide-show{
-    margin-top: 12px;
-    margin: auto;
-    position: absolute;
-    bottom: 25%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: rgba(255, 255, 255, 0.5);
+.slide-show {
+  position: absolute;
+  bottom: 50px;
+  right: 0;
+  transform: translate(-50%, -50%);
+  color: rgba(255, 255, 255, 0.5);
 }
 
 .slide-show:hover {
-    color: white;
+  color: white;
 }
