--- a/src/components/Meteo/css/DavisGraphsDay.module.css
+++ b/src/components/Meteo/css/DavisGraphsDay.module.css
@@ -1,22 +1,28 @@
 .isLoading {
+  width: 100%;
 
-    width: 100%;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  z-index: 999999;
 
-    svg {
-        margin: auto;
-        display: block;
-        stroke-dasharray: 1;
-        stroke-dashoffset: 1;
-        animation: draw 5s backwards infinite;
-        fill-opacity: 0.3;
-    }      
+  svg {
+    margin: auto;
+    display: block;
+    stroke-dasharray: 1;
+    stroke-dashoffset: 1;
+    animation: draw 5s backwards infinite;
+    fill-opacity: 0.3;
+  }
 }
-  
+
 @keyframes draw {
-    from {
-        stroke-dashoffset: 1;
-    }
-    to {
-        stroke-dashoffset: 0;
-    }
-}  
+  from {
+    stroke-dashoffset: 1;
+  }
+  to {
+    stroke-dashoffset: 0;
+  }
+}
