--- a/src/components/Meteo/css/Table.module.css
+++ b/src/components/Meteo/css/Table.module.css
@@ -1,48 +1,48 @@
 .davisTable {
+  width: 100%;
+  max-width: 1000px;
+  font-size: 10px;
+  overflow-x: auto;
+  margin: auto;
+  table {
+    color: black;
     width: 100%;
-    max-width: 1000px;
-    font-size: 10px;
-    overflow-x:auto;
-    margin: auto;
-    table {
-        color: black;
-        width: 100%;
 
-        button {
-
-            -webkit-appearance: none;
-            -webkit-border-radius: 0;
-            border-radius: 0;
-            width: 100%;
-            font-size: 10px;
-            &:hover {
-                cursor: alias;
-            }
-        }
-        tr {
-            background-color: white;
-            font-size: 10px;
-            th {
-                font-size: 10px;
-                font-weight: lighter;
-            }
-        }
+    button {
+      -webkit-appearance: none;
+      -webkit-border-radius: 0;
+      border-radius: 0;
+      width: 100%;
+      font-size: 10px;
+      &:hover {
+        cursor: alias;
+      }
     }
+    tr {
+      background-color: white;
+      font-size: 10px;
+      text-align: center;
+      border: #b799998f solid 1px;
+      th {
+        font-size: 10px;
+        font-weight: lighter;
+      }
+    }
+  }
 }
 
 .link {
-    white-space: nowrap;
-    text-decoration: underline;
-    &:hover {
-        cursor: pointer;
-        background : #555555;
-        color: white;
-    }
+  white-space: nowrap;
+  text-decoration: underline;
+  &:hover {
+    cursor: pointer;
+    background: #555555;
+    color: white;
+  }
 }
 
 .datum {
-    color: white;
-    font-weight: bold;
-    background-color: red;
-  }
-  
+  color: white;
+  font-weight: bold;
+  background-color: red;
+}
