--- a/src/components/Meteo/css/ModifyPocasi.module.css
+++ b/src/components/Meteo/css/ModifyPocasi.module.css
@@ -1,37 +1,37 @@
 .editPocasi {
-    position: relative;
+  position: relative;
 }
 
-.container, .login-container, .edit-container, .add-container, .deleteContainer {
-    position: absolute;
-    width: 90%;
-    max-width: 600px;
-    left: 50%;
-    top: 200px;
-    /* transform: translate(-50%, -50%); */
-    transform: translateX(-50%);
-    background-color: rgba(0, 0, 0, 0.5);
+.container,
+.login-container,
+.edit-container,
+.add-container,
+.deleteContainer {
+  position: absolute;
+  color: white;
+  width: 90%;
+  max-width: 600px;
+  left: 50%;
+  top: 200px;
+  /* transform: translate(-50%, -50%); */
+  transform: translateX(-50%);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .closeBtn {
-    text-align: right;
-    margin-right: 10px;
-    span {
-        &:hover{
-            border: 1px solid black;
-            cursor: pointer;
-        }
+  color: white;
+  text-align: right;
+  margin-right: 10px;
+  span {
+    &:hover {
+      border: 1px solid black;
+      cursor: pointer;
     }
+  }
 }
 
 .datum {
-
-        color: white;
-        font-weight: bold;
-        background-color: red;
+  color: white;
+  font-weight: bold;
+  background-color: red;
 }
-
-
-
-
-
