--- a/src/components/Booking/components/Status/css/status.css
+++ b/src/components/Booking/components/Status/css/status.css
@@ -1,42 +1,41 @@
-.booking_status{
-	margin: auto;
-	justify-content: center;
-	text-align: center;
-	margin: 0;
-	width: auto;
-	background: url("./../images/booking_form_low_quality.jpg");
-	background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-position: top;
-	padding: 1rem;
-	border: 1px solid black;
-
+.booking_status {
+  margin: auto;
+  justify-content: center;
+  text-align: center;
+  margin: 0;
+  width: auto;
+  background: url('images/booking_form_low_quality.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-position: top;
+  padding: 1rem;
+  border: 1px solid black;
 }
 
-.form_result_alert{
-	position: absolute;
-	width: 80%;
-	height: 80%;
-	top: 50px;
-	color: black;
-	border: 1px solid white;
-	border-radius: 5px;
-	text-align: center;
-	display: none;
-	text-decoration: none;
+.form_result_alert {
+  position: absolute;
+  width: 80%;
+  height: 80%;
+  top: 50px;
+  color: black;
+  border: 1px solid white;
+  border-radius: 5px;
+  text-align: center;
+  display: none;
+  text-decoration: none;
 }
 
 .form_result_alert ul {
-	list-style: none;
+  list-style: none;
 }
 
-.booking_info{
-	background-color:rgba(255, 208,   0, 0.9);
-	margin-top: 2rem;
-	width: 100%;
-	border-radius: 5px;
-	border: 1px solid black;
-	color: black;
-	font-size: 13px;
+.booking_info {
+  background-color: rgba(255, 208, 0, 0.9);
+  margin-top: 2rem;
+  width: 100%;
+  border-radius: 5px;
+  border: 1px solid black;
+  color: black;
+  font-size: 13px;
 }
