--- a/src/components/PhotoGallery/components/BigImage/BigImages.css
+++ b/src/components/PhotoGallery/components/BigImage/BigImages.css
@@ -12,11 +12,11 @@
   background-size: contain;
   background-repeat: no-repeat;
   background-position: top center;
-  content: "";
+  content: '';
   position: absolute;
   width: 100%;
   height: 100%;
-  z-index: 1;     
+  z-index: 1;
 }
 
 .photoInfo {
@@ -52,7 +52,16 @@
   top: 2%;
 }
 
-.prevPhoto, .nextPhoto, .next8, .prev8, .play, .stop, .slides, .textOn, .textOff, .category {
+.prevPhoto,
+.nextPhoto,
+.next8,
+.prev8,
+.play,
+.stop,
+.slides,
+.textOn,
+.textOff,
+.category {
   padding: 10px;
   position: absolute;
   border: none;
@@ -69,7 +78,8 @@
   left: 45%;
 }
 
-.prevPhotoBig, .nextPhotoBig {
+.prevPhotoBig,
+.nextPhotoBig {
   padding: 10px;
   position: absolute;
   border: none;
@@ -92,13 +102,15 @@
   right: 1%;
 }
 
-.nextPhotoBig:hover, .prevPhotoBig:hover {
+.nextPhotoBig:hover,
+.prevPhotoBig:hover {
   background-color: transparent;
   color: white;
   cursor: pointer;
 }
 
-.textOn, .textOff {
+.textOn,
+.textOff {
   right: 25%;
 }
 
@@ -110,7 +122,8 @@
   left: 13%;
 }
 
-.play, .stop {
+.play,
+.stop {
   left: 25%;
 }
 
@@ -130,11 +143,15 @@
   color: white;
 }
 
-.nextPhoto:hover, .prevPhoto:hover,
-.next8:hover, .prev8:hover,
-.play:hover, .stop:hover,
+.nextPhoto:hover,
+.prevPhoto:hover,
+.next8:hover,
+.prev8:hover,
+.play:hover,
+.stop:hover,
 .slides:hover,
-.textOn:hover, .textOff:hover,
+.textOn:hover,
+.textOff:hover,
 .category:hover {
   background: white;
   color: black;
@@ -149,7 +166,8 @@
   }
 }
 
-.fade-in, .fade-in::after {
+.fade-in,
+.fade-in::after {
   opacity: 0;
   animation: fadeIn 0.5s ease-in 1 forwards;
 }
@@ -164,7 +182,15 @@
 }
 
 @media (min-width: 1000px) {
-  .prevPhoto, .nextPhoto, .next8, .prev8, .play, .stop, .slides, .textOn, .textOff {
+  .prevPhoto,
+  .nextPhoto,
+  .next8,
+  .prev8,
+  .play,
+  .stop,
+  .slides,
+  .textOn,
+  .textOff {
     font-size: 30px;
   }
   .photoInfo {
