--- a/src/components/Start/WebCam/css/WebCamSlideShow.css
+++ b/src/components/Start/WebCam/css/WebCamSlideShow.css
@@ -1,11 +1,23 @@
 .slide-show {
   position: absolute;
   bottom: 50px;
-  right: 0;
+  right: -10px;
   transform: translate(-50%, -50%);
   color: rgba(255, 255, 255, 0.5);
 }
 
 .slide-show:hover {
   color: white;
+}
+
+.slide-reset {
+  position: absolute;
+  bottom: 50px;
+  left: 40px;
+  transform: translate(-50%, -50%);
+  color: rgba(255, 255, 255, 0.5);
+
+  &:hover {
+    color: white;
+  }
 }
