--- a/src/components/Start/WebCam/css/slider.css
+++ b/src/components/Start/WebCam/css/slider.css
@@ -3,13 +3,15 @@
   position: absolute;
   width: 100%;
   bottom: 0px;
+  display: flex;
+  flex-direction: column;
 }
 
 .slide-container {
   box-sizing: border-box;
-  width: 100%;
-  margin: auto;
-  padding: 12px 0 0 0;
+  width: calc(100% - 60px);
+  margin-left: auto;
+  padding: 10px 0 0 0;
 }
 
 .slider {
