--- a/src/css/main.css
+++ b/src/css/main.css
@@ -10,3 +10,10 @@ body {
 * {
   box-sizing: border-box;
 }
+
+.text {
+  text-align: justify;
+  padding: 1vw 2vw 2vw 2vw;
+  background: #ff9933;
+  color: black;
+}
